--- a/HTML - Personal Site/contact-me.html
+++ b/HTML - Personal Site/contact-me.html
@@ -10,5 +10,39 @@
     <p>Jaipur, Rajasthan - 303807</p>
     <p>9382706242</p>
     <p>subhadipmaity09@gmail.com</p>
+    <form action="mailto:subhadipmaity09@gmail.com" method="post" enctype="text/plain">
+        <label for="">Name: </label>
+        <input type="text" name="yourname">
+        <!-- <input type="color"> -->
+        <br>
+        <!-- <label for="">Do you want to sign up for the email list?</label>
+        <input type="checkbox"> -->
+        <!-- <label for="">Password: </label>
+        <input type="password">
+        <br> -->
+        <label for="">Email: </label>
+        <input type="email" name="youremail">
+        <br>
+        <!-- <label for="">Gender</label>
+        <input type="radio" name="gender">
+        <label for="">Male</label>
+        <input type="radio" name="gender">
+        <label for="">Female</label>
+        <br>
+        <label for="">Upload Image: </label>
+        <input type="image">
+        <br>
+        <label for="">Upload File: </label>
+        <input type="file">
+        <br> -->
+        <label for="">Description</label>
+        <br>
+        <textarea name="yourmessage" id="" cols="30" rows="10"></textarea>
+        <br> 
+        <label for="">Do you want to submit?</label>
+        <input type="checkbox">
+        <br>
+        <input type="submit">
+    </form>
 </body>
 </html>
