--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subhadip's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <img src="image/Subhadip.png" alt="Subhadip Profile Picture">
