--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -8,10 +8,15 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <div>
+    <div class="top-container">
         <h1>I'm Subhadip</h1>
         <p>a web designer</p>
     </div>
-    
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
 </body>
 </html>
