--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subhadip Maity</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="favicon.ico" />
+  </head>
+  <body>
     <div class="top-container">
-        <h1>I'm Subhadip</h1>
-        <p>a web designer</p>
+      <img src="images/cloud.png" alt="cloud-img" />
+      <h1>I'm Subhadip</h1>
+      <p>a web designer</p>
+      <img src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountain.png" alt="" />
     </div>
-    <div class="middle-container">
-
-    </div>
-    <div class="bottom-container">
-
-    </div>
-</body>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
+  </body>
 </html>
