--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -17,15 +17,15 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
       <h1>I'm Subhadip</h1>
-      <h2>a web designer</h2>
+      <h2 class="top-h2">a web designer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
       <img src="images/mountain.png" alt="" />
     </div>
     <div class="middle-container">
       <div class="profile">
         <img src="images/Subhadip.png" alt="profil" />
-        <h2>Hello.</h2>
-        <p>
+        <h2>Hello</h2>
+        <p class="intro">
           Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non
           auctor, montes nulla distinctio.
         </p>
@@ -34,17 +34,17 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="images/html.png" alt="computer-img" />
-          <h3>Lorem & Ipsum</h3>
-          <p>
+          <img class="code-img" src="images/html.png" alt="computer-img" />
+          <h3>Design & Development</h3>
+          <p class="code-p">
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer
             vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante,
             ut lorem eros.
           </p>
         </div>
         <div class="skill-row">
-          <img class="" src="images/bike.png" alt="bike-img" />
-          <h3>Lorem Ipsum Dolor</h3>
+          <img class="bike-img" src="images/bike.png" alt="bike-img" />
+          <h3>Bike Riding</h3>
           <p>
             Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
             bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu,
@@ -56,7 +56,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>
+        <p class="contact-msg">
           Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
           tellus donec dui, ornare erat.
         </p>
@@ -68,7 +68,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.flip-it.app/">Website</a>
-      <p>© Year Name Surname.</p>
+      <p class="copyright">© 2024 Subhadip Maity.</p>
     </div>
   </body>
 </html>
