--- a/TINDOG-START_MASTER/index.html
+++ b/TINDOG-START_MASTER/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8" />
     <title>TinDog</title>
     <!-- CSS Stylesheets -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- CSS style sheet -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +16,15 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Js Bundle with Popper -->
     <script
@@ -32,7 +39,7 @@
       <div class="container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="">TinDog</a>
+          <a class="navbar-brand" href="">tindog</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -63,30 +70,42 @@
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button">Download</button>
-            <button type="button">Download</button>
+            <button type="button" class="btn btn-dark btn-lg download-button">
+              <i class="fa-brands fa-apple"></i> Download
+            </button>
+            <button type="button" class="btn btn-outline-light btn-lg download-button">
+              <i class="fa-brands fa-google-play"></i> Download
+            </button>
           </div>
 
           <div class="col-lg-6">
-            <img src="images/iphone6.png" alt="iphone-mockup" />
+            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
           </div>
         </div>
       </div>
     </section>
 
     <!-- Features -->
-
+  
     <section id="features">
-      <h3>Easy to use.</h3>
+      <div class="row">
+      <div class="feature-box col-lg-4">
+        <i class="icon fa-solid fa-circle-check fa-4x"></i>
+        <h3>Easy to use</h3>
       <p>So easy to use, even your dog could do it.</p>
-
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      </div>
+      <div class="feature-box col-lg-4">
+        <i class="icon fa-solid fa-bullseye fa-4x"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="feature-box col-lg-4">
+        <i class="icon fa-solid fa-heart fa-4x"></i>
+        <h3>Guaranteed to work</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
     </section>
-
     <!-- Testimonials -->
 
     <section id="testimonials">
