--- a/TINDOG-START_MASTER/index.html
+++ b/TINDOG-START_MASTER/index.html
@@ -57,13 +57,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -199,7 +199,9 @@
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-lg w-100 btn-outline-dark" type="button">Sign Up</button>
+              <button class="btn btn-lg w-100 btn-outline-dark" type="button">
+                Sign Up
+              </button>
             </div>
           </div>
         </div>
@@ -213,7 +215,9 @@
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-lg w-100 btn-dark" type="button">Sign Up</button>
+              <button class="btn btn-lg w-100 btn-dark" type="button">
+                Sign Up
+              </button>
             </div>
           </div>
         </div>
@@ -228,7 +232,9 @@
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <!-- <p>Unlimited App Usage</p> -->
-              <button class="btn btn-lg w-100 btn-dark" type="button">Sign Up</button>
+              <button class="btn btn-lg w-100 btn-dark" type="button">
+                Sign Up
+              </button>
             </div>
           </div>
         </div>
@@ -238,14 +244,27 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <!-- <button type="button">Download</button>
+      <button type="button">Download</button> -->
+      <button type="button" class="btn btn-dark btn-lg download-button">
+        <i class="fa-brands fa-apple"></i> Download
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-light btn-lg download-button"
+      >
+        <i class="fa-brands fa-google-play"></i> Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
+      <i class="social-icon fa-brands fa-twitter"></i>
+      <i class="social-icon fa-brands fa-facebook"></i>
+      <i class="social-icon fa-brands fa-instagram"></i>
+      <i class="social-icon fa-solid fa-envelope"></i>
       <p>© Copyright TinDog</p>
     </footer>
   </body>
